--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
         <outputDirectory>target/classes</outputDirectory>
         <finalName>${artifactId}-${version}</finalName>
         <testOutputDirectory>target/test-classes</testOutputDirectory>
-        <sourceDirectory>../../java/</sourceDirectory>
-
+        <sourceDirectory>main/java/app</sourceDirectory>
+        <testSourceDirectory>main/test</testSourceDirectory>
 
         <plugins>
             <plugin>
